--- a/admin/language/en-GB/en-GB.com_usernotify.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.ini
@@ -1,7 +1,6 @@
-; $Id: en-GB.com_usernotify.ini 20990 2011-03-18 16:42:30Z infograf768 $
-; Joomla! Project
-; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
-; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
+; User Notify Component
+; Copyright (C) 2015 RJCreations. All rights reserved.
+; License GNU General Public License version 3 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
 COM_USERNOTIFY="User Notify"
