--- a/admin/language/en-GB/en-GB.com_usernotify.sys.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.sys.ini
@@ -1,7 +1,6 @@
-; $Id: en-GB.com_usernotify.sys.ini 20196 2011-01-09 02:40:25Z ian $
-; Joomla! Project
-; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
-; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
+; User Notify Component
+; Copyright (C) 2015 RJCreations. All rights reserved.
+; License GNU General Public License version 3 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
 COM_USERNOTIFY="User Notify"
