--- a/site/language/en-GB/en-GB.com_usernotify.ini
+++ b/site/language/en-GB/en-GB.com_usernotify.ini
@@ -1,8 +1,7 @@
-; $Id: en-GB.com_usernotify.ini 20942 2011-03-10 08:43:45Z infograf768 $
-; Joomla! Project
-; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8 - No BOM
+; User Notify Component
+; Copyright (C) 2015 RJCreations. All rights reserved.
+; License GNU General Public License version 3 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
 
 COM_USERNOTIFY_DEFAULT_PAGE_TITLE="User Notify"
 
