--- a/admin/language/en-GB/en-GB.com_usernotify.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.ini
@@ -1,5 +1,5 @@
 ; User Notify Component
-; Copyright (C) 2015 RJCreations. All rights reserved.
+; Copyright (C) 2016 RJCreations. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
@@ -38,4 +38,6 @@ COM_USERNOTIFY_FIELD_EMAIL_DESC="Enter a template to be used for email notificat
 COM_USERNOTIFY_FIELD_SMS_LABEL="SMS Msg Template"
 COM_USERNOTIFY_FIELD_SMS_DESC="Enter a template to be used for SMS notifications (see help)"
 
-JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="options"
+JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
+JHELP_COMPONENTS_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
+JHELP_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
