--- a/admin/language/en-GB/en-GB.com_usernotify.sys.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.sys.ini
@@ -1,5 +1,5 @@
 ; User Notify Component
-; Copyright (C) 2015 RJCreations. All rights reserved.
+; Copyright (C) 2016 RJCreations. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
@@ -21,4 +21,6 @@ COM_USERNOTIFY_FORM_VIEW_DEFAULT_DESC="Display a form to submit a web link in th
 COM_USERNOTIFY_FORM_VIEW_DEFAULT_OPTION="Default"
 COM_USERNOTIFY_FORM_VIEW_DEFAULT_TITLE="Submit a User Subs"
 
-JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="options"
+JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
+JHELP_COMPONENTS_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
+JHELP_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
