various steps toward full function; version to 0.3.0

--- a/admin/language/en-GB/en-GB.com_usernotify.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.ini
@@ -9,6 +9,7 @@ COM_USERNOTIFY_MENU="User Notify"
 
 COM_USERNOTIFY_NOTIFY_PUB_HEAD="Notify when Published"
 COM_USERNOTIFY_NOTIFY_UPD_HEAD="Notify when Updated"
+COM_USERNOTIFY_NOTIFY_UGRPS_HEAD="User Groups"
 COM_USERNOTIFY_EMAIL_TMPL_HEAD="Custom Email Template"
 COM_USERNOTIFY_SMS_TMPL_HEAD="Custom SMS Template"
 COM_USERNOTIFY_NOT_CONFIGURED="No Notifications [ category not configured ]"
@@ -23,21 +24,25 @@ COM_USERNOTIFY_MANAGER_CATEGORIES="User Notify: Categories Manager"
 COM_USERNOTIFY_EDIT_CATEGORY="Category Notification Settings :: "
 
 ; component config
+COM_USERNOTIFY_TEMPLATES_LABEL="Templates"
+COM_USERNOTIFY_TEMPLATES_DESC="Configure these templates to provide the message that is sent as notification"
 COM_USERNOTIFY_FIELD_OPTINOUT_LABEL="Default User Notifications"
-COM_USERNOTIFY_FIELD_OPTINOUT_DESC="This determines whether, by default, all users will receive notification emails until they inhibit them or whether they will receive none until they make selections."
+COM_USERNOTIFY_FIELD_OPTINOUT_DESC="This determines whether, by default, all users will receive notification emails until they inhibit them (opt-out) or whether they will receive none until they make selections (opt-in)."
 COM_USERNOTIFY_FIELD_OPTINOUT_OUT="Recieve all unless inhibited"
 COM_USERNOTIFY_FIELD_OPTINOUT_IN="Recieve none unless chosen"
 COM_USERNOTIFY_FIELD_ONPUB_LABEL="Notify on Publish"
 COM_USERNOTIFY_FIELD_ONPUB_DESC=""
 COM_USERNOTIFY_FIELD_ONUPD_LABEL="Notify on Update"
 COM_USERNOTIFY_FIELD_ONUPD_DESC=""
+COM_USERNOTIFY_FIELD_UGRPS_LABEL="User Group(s)"
+COM_USERNOTIFY_FIELD_UGRPS_DESC=""
 COM_USERNOTIFY_FIELD_SUBJECT_LABEL="Notification Subject"
 COM_USERNOTIFY_FIELD_SUBJECT_DESC="Enter the subject line to be used in email/SMS"
-COM_USERNOTIFY_FIELD_EMAIL_LABEL="Email Msg Template"
+COM_USERNOTIFY_FIELD_EMAIL_LABEL="Email Template"
 COM_USERNOTIFY_FIELD_EMAIL_DESC="Enter a template to be used for email notifications (see help)"
-COM_USERNOTIFY_FIELD_SMS_LABEL="SMS Msg Template"
+COM_USERNOTIFY_FIELD_SMS_LABEL="SMS Template"
 COM_USERNOTIFY_FIELD_SMS_DESC="Enter a template to be used for SMS notifications (see help)"
-
-JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
-JHELP_COMPONENTS_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
-JHELP_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
+COM_USERNOTIFY_FIELD_EMAILU_LABEL="Email Template (update)"
+COM_USERNOTIFY_FIELD_EMAILU_DESC="Enter a template to be used for email notifications when an item is updated (see help)"
+COM_USERNOTIFY_FIELD_SMSU_LABEL="SMS Template (update)"
+COM_USERNOTIFY_FIELD_SMSU_DESC="Enter a template to be used for SMS notifications when an item is updated (see help)"
