--- a/admin/language/en-GB/en-GB.com_usernotify.sys.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.sys.ini
@@ -21,6 +21,4 @@ COM_USERNOTIFY_FORM_VIEW_DEFAULT_DESC="Display a form to submit a web link in th
 COM_USERNOTIFY_FORM_VIEW_DEFAULT_OPTION="Default"
 COM_USERNOTIFY_FORM_VIEW_DEFAULT_TITLE="Submit a User Subs"
 
-JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
-JHELP_COMPONENTS_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
-JHELP_USERNOTIFY_OPTIONS="/components/com_usernotify/help/options"
+JHELP_COMPONENTS_COM_USERNOTIFY_OPTIONS="component_options"
