--- a/admin/language/en-GB/en-GB.com_usernotify.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.ini
@@ -7,6 +7,8 @@ COM_USERNOTIFY="User Notify"
 COM_USERNOTIFY_DESCRIPTION="This is the User Notify description"
 COM_USERNOTIFY_MENU="User Notify"
 
+COM_USERNOTIFY_SETUP_OPTIONS="Please setup component 'options', selecting extensions (such as com_content) to monitor for new content"
+
 COM_USERNOTIFY_NOTIFY_PUB_HEAD="Notify when Published"
 COM_USERNOTIFY_NOTIFY_UPD_HEAD="Notify when Updated"
 COM_USERNOTIFY_NOTIFY_UGRPS_HEAD="User Groups"
