--- a/admin/language/en-GB/en-GB.com_usernotify.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.ini
@@ -24,8 +24,13 @@ COM_USERNOTIFY_FIELD_COMPONENTS_LABEL="Available for: "
 
 COM_USERNOTIFY_MANAGER_CATEGORIES="User Notify: Categories Manager"
 COM_USERNOTIFY_EDIT_CATEGORY="Category Notification Settings :: "
+COM_USERNOTIFY_CAT_SETTINGS="Notification Settings"
+COM_USERNOTIFY_CAT_SETTINGS_DESC="Select what notifications will be sent for this category and which usergroups will receive them"
+COM_USERNOTIFY_CAT_TEMPLATES="Email/SMS Templates"
+COM_USERNOTIFY_CAT_TEMPLATES_DESC="Configure these templates to override the default message that is sent as notification"
 
 ; component config
+COM_USERNOTIFY_CONFIGURATION="User Notify: Options"
 COM_USERNOTIFY_TEMPLATES_LABEL="Templates"
 COM_USERNOTIFY_TEMPLATES_DESC="Configure these templates to provide the message that is sent as notification"
 COM_USERNOTIFY_FIELD_OPTINOUT_LABEL="Default User Notifications"
@@ -48,3 +53,5 @@ COM_USERNOTIFY_FIELD_EMAILU_LABEL="Email Template (update)"
 COM_USERNOTIFY_FIELD_EMAILU_DESC="Enter a template to be used for email notifications when an item is updated (see help)"
 COM_USERNOTIFY_FIELD_SMSU_LABEL="SMS Template (update)"
 COM_USERNOTIFY_FIELD_SMSU_DESC="Enter a template to be used for SMS notifications when an item is updated (see help)"
+
+COM_USERNOTIFY_SMS_MESSAGE="<p>There has been a new item published to an area of the website for which you are configured to receive notifications.</p><p>A new article, &#39;{{TITLE}}&#39;, has been posted in the &#39;{{CATEGORY}}&#39; category.</p><p>{{ITEM-LINK}}</p><p>If you wish to discontinue this notification, you may do so from the &#39;Your Notifications&#39; menu item when you are logged into the website.</p>"
