add mail queueing for subsequent cron sending

--- a/admin/language/en-GB/en-GB.com_usernotify.ini
+++ b/admin/language/en-GB/en-GB.com_usernotify.ini
@@ -41,6 +41,10 @@ COM_USERNOTIFY_FIELD_ONPUB_LABEL="Notify on Publish"
 COM_USERNOTIFY_FIELD_ONPUB_DESC=""
 COM_USERNOTIFY_FIELD_ONUPD_LABEL="Notify on Update"
 COM_USERNOTIFY_FIELD_ONUPD_DESC=""
+COM_USERNOTIFY_FIELD_USEQ_LABEL="Use Mail Queue"
+COM_USERNOTIFY_FIELD_USEQ_DESC=""
+COM_USERNOTIFY_FIELD_MSGPER_LABEL="Messages/Batch"
+COM_USERNOTIFY_FIELD_MSGPER_DESC=""
 COM_USERNOTIFY_FIELD_UGRPS_LABEL="User Group(s)"
 COM_USERNOTIFY_FIELD_UGRPS_DESC=""
 COM_USERNOTIFY_FIELD_SUBJECT_LABEL="Notification Subject"
