adjust user's configuration

--- a/site/language/en-GB/en-GB.com_usernotify.ini
+++ b/site/language/en-GB/en-GB.com_usernotify.ini
@@ -30,4 +30,5 @@ COM_USERNOTIFY_SUB_EMAIL="Send Email"
 COM_USERNOTIFY_SUB_SMS="Send Text"
 COM_USERNOTIFY_SUB_UPDT="Updates"
 
+COM_USERNOTIFY_USER_BLURB="Set your notification preferences as desired then click 'Update Notification Settings' to save them.  You may set the configuration to receive no notifications at all."
 COM_USERNOTIFY_UPDATE_SUBMIT="Update Notification Settings"
